fix scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,11 +15,7 @@ html {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: linear-gradient(
-    to bottom,
-    rgba(110, 231, 183, 0.5),
-    rgba(56, 189, 248, 0.5)
-  ); /* Degradado en la barra de desplazamiento con opacidad */
+  background: linear-gradient(to bottom, rgba(110, 231, 183, 0.5), rgba(56, 189, 248, 0.5));
   border-radius: 6px; /* Esquinas redondeadas */
 }
 
